--- a/src/App.css
+++ b/src/App.css
@@ -16,10 +16,11 @@ body {
   align-items: center;
   background-color: var(--Lightgrayishcyan);
   max-width: 1440px;
+  font-size: 1rem;
 
 }
 
-.logo>svg {
+.logo {
   display: block;
   margin: 1em auto;
 }
@@ -38,10 +39,20 @@ body {
   padding: 2em;
 }
 
+.s-title {
+  color: var(--Darkgrayiscyan);
+}
+
 .output {
   background-color: var(--Verydarkcyan);
   border-radius: 10px;
   color: var(--White);
+}
+
+.center-me {
+  display: block;
+  text-align: center;
+  margin: 0.5em 0;
 }
 
 .tip-amount,
@@ -57,7 +68,7 @@ body {
 
 .amounts-figures {
   color: var(--StrongCyan);
-  font-size: 1.5rem;
+  font-size: 2rem;
 }
 
 .reset-btn {
@@ -71,6 +82,11 @@ body {
   padding: .25em 2em;
   width: 100%;
   margin: 1em 0;
+}
+
+.reset-btn:hover {
+  background-color: var(--Lightgrayishcyan);
+  color: var(--Verydarkcyan);
 }
 
 .bill-label,
@@ -100,6 +116,10 @@ body {
   gap: 15px;
 }
 
+button {
+  cursor: pointer;
+}
+
 .tip-label {
   background-color: var(--Verydarkcyan);
   color: var(--Lightgrayishcyan);
@@ -110,7 +130,7 @@ body {
   padding: 0.25em;
 }
 
-.tip-label:is(:hover, :active, :focus, ) {
+.tip-label:is(:hover, :active, :focus) {
   background-color: var(--StrongCyan);
   cursor: pointer;
 }
